# monorepo-learn

./: .gitignore  Makefile  README.md  package.json
.github/: CODEOWNERS  README.md  ci-matrix.yml
.github/workflows/: 00-triggers.yml  README.md  _build.yml  _cleanup.yml  _deploy.yml  _notify.yml  _pre-deploy.yml  build-image.yml  build-images.yml  cd-preview.yml  cd-production.yml  cd-staging.yml  ci-build.yml  deploy-railway.yml
.github/workflows/_reusable/: build.yml  cleanup.yml  notify.yml
.github/workflows/legacy/: build-image.yml_bk  build-images.yml_bk
docker/: Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.go-api.dev  Dockerfile.go-gateway.dev  Dockerfile.go-services  Dockerfile.php-api  Dockerfile.php-api.dev  Dockerfile.rust-api  Dockerfile.rust-api.dev  docker-compose.dev.yml  docker-compose.yml
docs/: LOCAL_DEVELOPMENT.md  RAILWAY_DEPLOYMENT.md  STRUCTURE.md
frontend/: package.json  railway.json  turbo.json
go-services/: .air.gateway.toml  .air.toml  go.work  go.work.sum
php/: phpunit.xml
php-backend/: composer.json
php-services/: composer.json  monorepo-builder.php  railway.json
rust-services/: Cargo.toml  railway.json
rust-services/libs/proto/: Cargo.toml
rust-services/libs/proto/src/: lib.rs
rust-services/libs/proto/src/user/v1/: user.v1.rs
rust-services/libs/shared-utils/: Cargo.toml
rust-services/libs/shared-utils/src/: lib.rs
rust-services/services/api-service/: Cargo.toml
rust-services/services/api-service/src/: main.rs
scripts/: railway-init.sh
shared-schemas/: buf.gen.yaml  buf.yaml
(+23 files in other folders)
