[workspace]
resolver = "2"
members = [
    "services/api-service",
    "libs/shared-utils",
    "libs/proto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
prost = "0.13"
tonic = "0.12"
